feat: Improve forecasting model accuracy and UI
Refines global parameter calculation by using the 75th percentile for growth rate (k) and seasonality, providing a more robust representation of store trends.

Updates date sorting in the dashboard to use Date objects for accurate chronological order.

Introduces percentile-based outlier removal (70th percentile) in the dashboard to focus on core data density for density estimation.

Enhances store analysis by calculating base forecast values and confidence intervals more accurately, ensuring non-negative results and proper simulation parameter adjustments.

Adjusts the display of top/worst growers in analytics to show the top/bottom 20 stores instead of 5.

Changes the application title for brevity.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QB HOUSE 店舗予測AI - エンタープライズ究極安定版</title>
+    <title>QB HOUSE 店舗予測＆AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
     <style>
