--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -6,6 +7,7 @@
     <title>QB HOUSE 店舗予測＆AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV" crossorigin="anonymous">
     <style>
       :root {
         --qb-blue: #005EB8;
@@ -53,7 +55,9 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
     "react": "https://esm.sh/react@^19.2.3",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "marked": "https://esm.sh/marked@^17.0.1"
+    "marked": "https://esm.sh/marked@^17.0.1",
+    "katex": "https://esm.sh/katex@0.16.9",
+    "papaparse": "https://esm.sh/papaparse@5.4.1"
   }
 }
 </script>
