--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "marked": "https://esm.sh/marked@^17.0.1",
     "katex": "https://esm.sh/katex@0.16.9",
-    "papaparse": "https://esm.sh/papaparse@5.4.1"
+    "papaparse": "https://esm.sh/papaparse@5.4.1",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3"
   }
 }
 </script>
